# PowerSync

./: .coderabbit.yaml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  IMPROVEMENTS.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  SOLAR_SURPLUS_ENHANCEMENTS_PLAN.md  config.py  conftest.py  ocpp_server.py  powersync-ocpp.service  powersync.service  powersync.sudoers  pro-project-approach-review-guidance-optimizer-2026-07-16.txt  pro-project-approach-review-guidance-ticket-204-2026-07-16.txt  pro-project-approach-review-guidance-ticket-213-2026-07-16.txt  pro-project-approach-review-guidance-ticket-261-2026-07-16.txt  pro-project-approach-review-guidance-ticket-262-2026-07-16.txt  pro-project-approach-review-guidance-ticket-283-2026-07-16.txt  pro-project-approach-review-guidance.txt  pyproject.toml  requirements.txt  update.sh
.cursor/: environment.json
.github/: FUNDING.yml  copilot-instructions.md  discord-release-last-posted.txt  mcp.json  pull_request_template.md
HA Dashboard/: README.md  power_sync_dashboard.yaml  tesla_sync_dashboard.yaml
app/: __init__.py  api_clients.py  forms.py  models.py  push_notifications.py  route_helpers.py  routes.py  sigenergy_client.py  sigenergy_modbus.py  solcast.py  tariff_converter.py  tasks.py  websocket_client.py
blueprints/: battery_health_from_powerwall_capacity_sensor.yaml
docker/: Dockerfile
docs/: APP_REVIEW_RESPONSE.md  APP_STORE_LISTING.md  CLAUDE.md  DEPLOYMENT_OPTIONS.md  HA_README.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md  index.html  privacy-policy.md  privacy.html  (+1 more)
(+430 files in other folders)
